
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ HANDLE ;


 scalar_t__ CreateFileA (char*,int,int ,int *,int ,int ,int *) ;
 int GENERIC_READ ;
 int GENERIC_WRITE ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int OPEN_EXISTING ;

HANDLE EstablishPipeConnection(char *pszPipe)
{
 HANDLE hPipe = CreateFileA(
   pszPipe,
   GENERIC_READ | GENERIC_WRITE,
   0,
   ((void*)0),
   OPEN_EXISTING,
   0,
   ((void*)0)
  );

 if(hPipe == INVALID_HANDLE_VALUE)
 {
  return ((void*)0);
 }

 return hPipe;
}
